多处更改 跳转到错误页面弹窗提示错误信息 公告视图模型添加公告ID 添加公告的编辑、删除和查看详情功能 同步公告查看功能到成员页 更新主页的功能概述栏

--- a/FamilySys/Views/Admin/Error.cshtml
+++ b/FamilySys/Views/Admin/Error.cshtml
@@ -1,12 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Http
 
 @{
-	ViewData["Title"] = "操作失败";
+	ViewData["Title"] = "管理员";
 	Layout = "~/Views/Shared/_AdminLayout.cshtml";
 	Context.Response.WriteAsync("<meta http-equiv='refresh' content='3; url=/Admin' />");
 }
 <h2>操作失败</h2>
-
+@Html.Raw(TempData["ErrMsg"])
 <body>
 	<form id="form1" runat="server">
 		<div id='div1'>
