--- a/FamilySys/Views/Admin/ShowAnnouncements.cshtml
+++ b/FamilySys/Views/Admin/ShowAnnouncements.cshtml
@@ -1,9 +1,58 @@
-﻿
+﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
+@model IQueryable<FamilySys.Models.DbModels.Announcement>
 @{
     ViewData["Title"] = "管理员";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>查看公告</h2>
+<h2 align="center">公告</h2>
 @Html.Raw(TempData["Success"])
-
+<table class="table" style="text-align: center; margin: auto;">
+	<tr>
+		<th style="text-align: center">标题</th>
+		<th style="text-align: center">字数</th>
+		<th style="text-align: center">发布人</th>
+		<th style="text-align: center">发布时间</th>
+		<th style="text-align: center">最后修改时间</th>
+		<th style="text-align: center">操作</th>
+	</tr>
+	@foreach (var each in Model) {
+	<tr>
+		<td>@each.Title</td>
+		<td>@each.Content.Length</td>
+		<td>管理员</td>
+		<td>@each.Date.GetDateTimeFormats('f')[0].ToString()</td>
+		<td>@each.ModifyDate.GetDateTimeFormats('f')[0].ToString()</td>
+		<td>
+			<table style="margin: auto; text-align: center;">
+				<tr>
+					<td>
+						@using (Html.BeginForm("ShowAnnoDetails", "Admin", HttpMethod.Post)) {
+							<input type="hidden" name="ID" value="@each.ID" />
+							<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success" />
+						}
+					</td>
+					<td>
+						&nbsp;
+					</td>
+					<td>
+						@using (Html.BeginForm("EditAnno", "Admin", HttpMethod.Post)) {
+							<input type="hidden" name="ID" value="@each.ID" />
+							<input type="submit" name="EditBtn" value="编辑" class="btn btn-sm btn-primary" />
+						}
+					</td>
+					<td>
+						&nbsp;
+					</td>
+					<td>
+						@using (Html.BeginForm("DelAnno", "Admin", HttpMethod.Post)) {
+							<input type="hidden" name="ID" value="@each.ID" />
+							<input type="submit" name="DelBtn" value="删除" onclick="return ensure()" class="btn btn-sm btn-danger" />
+						}
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+	}
+</table>
