--- a/FamilySys/Views/Member/Error.cshtml
+++ b/FamilySys/Views/Member/Error.cshtml
@@ -7,20 +7,20 @@
 }
 
 <h2>操作失败</h2>
-
+@Html.Raw(TempData["ErrMsg"])
 <body>
-<form id="form1" runat="server">
-	<div id='div1'>
-	</div>
-</form>
+	<form id="form1" runat="server">
+		<div id='div1'>
+		</div>
+	</form>
 </body>
 
 <script type="text/javascript">
 	var t = 4;
-	function showTime(){
+	function showTime() {
 		t -= 1;
-		document.getElementById('div1').innerHTML= t + " 秒后跳转至主页";
-		setTimeout("showTime()",1000);
+		document.getElementById('div1').innerHTML = t + " 秒后跳转至主页";
+		setTimeout("showTime()", 1000);
 	}
 	showTime();
 </script>
