多处修改 加入新housework表 加入housework发布模型和展示模型 公告详情页面的返回链接箭头改为图标 实现成员的家庭事务发布、查看详情功能

--- a/FamilySys/Views/Admin/ShowAnnoDetails.cshtml
+++ b/FamilySys/Views/Admin/ShowAnnoDetails.cshtml
@@ -13,11 +13,13 @@
 		</p>
 	</div>
 	<h3>内容</h3>
-	@Html.Raw(Model.Content)
+	<p style="white-space: pre-wrap;word-wrap: break-word;">@Html.Raw(Model.Content)</p>
 </div>
 <br/>
 <div class="text-right">
-	<a asp-action="ShowAnnouncements" asp-controller="Admin">< 返回</a>
+	<a asp-action="ShowAnnouncements" asp-controller="Admin">
+		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> 返回
+	</a>
 </div>
 
 
