优化接受、放弃、完成事务相关代码

--- a/FamilySys/Views/Member/ShowHouseworks.cshtml
+++ b/FamilySys/Views/Member/ShowHouseworks.cshtml
@@ -24,7 +24,7 @@
 		</tr>
 		@foreach (var housework in Model) {
 			if (housework.IsDone) {
-				<tr class="success" style="background-color: darkseagreen;">
+				<tr style="background-color: darkseagreen;">
 					<td>@housework.ID</td>
 					<td style="width: 200px">@housework.Title</td>
 					<td>@housework.FromUsername</td>
@@ -67,16 +67,25 @@
 							<tr>
 								<td>
 									@using (Html.BeginForm("ShowHouseworkDetails", "Member", HttpMethod.Post)) {
-										<input type="hidden" name="ID" value="@housework.ID"/>
-										<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success"/>
+										<input type="hidden" name="ID" value="@housework.ID" />
+										<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success" />
 									}
 								</td>
 								@if (housework.ToUsername == ViewBag.Username) {
 									<td></td>
 									<td>
-										@using (Html.BeginForm("GiveUpHousework", "Member", HttpMethod.Post)) {
+										@using (Html.BeginForm("HouseworkOperation", "Member", HttpMethod.Post)) {
 											<input type="hidden" name="ID" value="@housework.ID" />
-											<input type="submit" name="ShowBtn" value="放弃" class="btn btn-sm btn-danger" />
+											<input type="hidden" value="2" name="action" />
+											<input type="submit" name="ShowBtn" value="放弃" onclick="return ensure()" class="btn btn-sm btn-danger" />
+										}
+									</td>
+									<td></td>
+									<td>
+										@using (Html.BeginForm("HouseworkOperation", "Member", HttpMethod.Post)) {
+											<input type="hidden" name="ID" value="@housework.ID" />
+											<input type="hidden" value="3" name="action" />
+											<input type="submit" name="ShowBtn" value="完成" onclick="return ensure()" class="btn btn-sm btn-primary" />
 										}
 									</td>
 								}
@@ -111,9 +120,10 @@
 								</td>
 								<td></td>
 								<td>
-									@using (Html.BeginForm("SignHousework", "Member", HttpMethod.Post)) {
+									@using (Html.BeginForm("HouseworkOperation", "Member", HttpMethod.Post)) {
 										<input type="hidden" name="ID" value="@housework.ID" />
-										<input type="submit" name="ShowBtn" value="接受" class="btn btn-sm btn-primary" />
+										<input type="hidden" value="1" name="action" />
+										<input type="submit" name="ShowBtn" value="接受" onclick="return ensure()" class="btn btn-sm btn-primary" />
 									}
 								</td>
 							</tr>
