--- a/FamilySys/Views/Member/ShowHouseworkDetails.cshtml
+++ b/FamilySys/Views/Member/ShowHouseworkDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@model FamilySys.Models.ViewModels.MemberViewModel.HouseworkShowcaseViewModel
+﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
+@model FamilySys.Models.ViewModels.MemberViewModel.HouseworkShowcaseViewModel
 @{
     ViewData["Title"] = "家庭成员";
     Layout = "~/Views/Shared/_MemberLayout.cshtml";
@@ -39,11 +40,27 @@
 		<h3>事务描述</h3>
 		<p style="white-space: pre-wrap; word-wrap: break-word;">@Html.Raw(Model.Content)</p>
 	</div>
+	@if (Model.ToUsername == "" && Model.ToUsername != ViewBag.Username) {
+		<div align="center">
+			@using (Html.BeginForm("HouseworkOperation", "Member", HttpMethod.Post)) {
+				<input type="hidden" name="ID" value="@Model.ID" />
+				<input type="hidden" value="1" name="action" />
+				<input type="hidden" name="FromPage" value="1" />
+				<input type="submit" name="ShowBtn" value="接受" onclick="return ensure()" class="btn btn-sm btn-success" />
+			}
+		</div>
+	}
 	<br />
 	<div class="text-right">
-		<a asp-action="ShowHouseworks" asp-controller="Member">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> 返回
-		</a>
+		@if (ViewBag.FromPage == "1") {
+			<a asp-action="ShowHouseworks" asp-controller="Member">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> 返回
+			</a>
+		} else if (ViewBag.FromPage == "2") {
+			<a asp-action="MyHouseworks" asp-controller="Member">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> 返回
+			</a>
+		}
 	</div>
 </div>
 
