--- a/FamilySys/Views/Member/ShowHouseworks.cshtml
+++ b/FamilySys/Views/Member/ShowHouseworks.cshtml
@@ -10,47 +10,49 @@
 	<h2>查看事务</h2>
 	<table class="table" style="margin: auto; text-align: center;">
 		<tr>
-			<th style="text-align: center">ID</th>
+			<th style="text-align: center;">ID</th>
 			<th style="text-align: center">标题</th>
 			<th style="text-align: center">发布人</th>
-			<th style="text-align: center">发布日期</th>
-			<th style="text-align: center">修改日期</th>
-			<th style="text-align: center">类型</th>
-			<th style="text-align: center">分值</th>
-			<th style="text-align: center">接受情况</th>
 			<th style="text-align: center">接受人</th>
-			<th style="text-align: center">完成情况</th>
-			<th style="text-align: center">操作</th>
+			<th style="text-align: center; width: 120px">发布日期</th>
+			<th style="text-align: center; width: 120px">修改日期</th>
+			<th style="text-align: center; width: 50px">类型</th>
+			<th style="text-align: center; width: 50px">分值</th>
+			<th style="text-align: center; width: 90px">接受情况</th>
+			<th style="text-align: center; width: 90px">完成情况</th>
+			<th style="text-align: center; width: 150px">操作</th>
 		</tr>
 		@foreach (var housework in Model) {
 			if (housework.IsDone) {
-				<tr style="background-color: darkseagreen;">
-					<td>@housework.ID</td>
-					<td style="width: 200px">@housework.Title</td>
-					<td>@housework.FromUsername</td>
-					<td>@housework.Date.GetDateTimeFormats('f')[0].ToString()</td>
-					<td>@housework.ModifyDate.GetDateTimeFormats('f')[0].ToString()</td>
-					@if (housework.Type == 1) {
-						<td>公共</td>
-					} else {
-						<td>个人</td>
-					}
-					<td>@housework.Score 分</td>
-					<td>已接受</td>
-					<td>@housework.ToUsername</td>
-					<td>已完成</td>
-					<td>
-						@using (Html.BeginForm("ShowHouseworkDetails", "Member", HttpMethod.Post)) {
-							<input type="hidden" name="ID" value="@housework.ID" />
-							<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success" />
-						}
-					</td>
-				</tr>
+		<tr style="background-color: darkseagreen;">
+			<td>@housework.ID</td>
+			<td style="width: 200px">@housework.Title</td>
+			<td>@housework.FromUsername</td>
+			<td>@housework.ToUsername</td>
+			<td>@housework.Date.GetDateTimeFormats('f')[0].ToString()</td>
+			<td>@housework.ModifyDate.GetDateTimeFormats('f')[0].ToString()</td>
+			@if (housework.Type == 1) {
+				<td>公共</td>
+			} else {
+				<td>个人</td>
+			}
+			<td>@housework.Score 分</td>
+			<td>已接受</td>
+			<td>已完成</td>
+			<td>
+				@using (Html.BeginForm("ShowHouseworkDetails", "Member", HttpMethod.Post)) {
+					<input type="hidden" name="ID" value="@housework.ID" />
+					<input type="hidden" name="FromPage" value="1" />
+					<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success" />
+				}
+			</td>
+		</tr>
 			} else if (housework.ToID != null) {
 				<tr style="background-color: cornflowerblue;">
 					<td>@housework.ID</td>
 					<td style="width: 200px">@housework.Title</td>
 					<td>@housework.FromUsername</td>
+					<td>@housework.ToUsername</td>
 					<td>@housework.Date.GetDateTimeFormats('f')[0].ToString()</td>
 					<td>@housework.ModifyDate.GetDateTimeFormats('f')[0].ToString()</td>
 					@if (housework.Type == 1) {
@@ -60,14 +62,14 @@
 					}
 					<td>@housework.Score 分</td>
 					<td>已接受</td>
-					<td>@housework.ToUsername</td>
 					<td>未完成</td>
 					<td>
-						<table>
+						<table style="margin: auto">
 							<tr>
 								<td>
 									@using (Html.BeginForm("ShowHouseworkDetails", "Member", HttpMethod.Post)) {
 										<input type="hidden" name="ID" value="@housework.ID" />
+										<input type="hidden" name="FromPage" value="1" />
 										<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success" />
 									}
 								</td>
@@ -77,6 +79,7 @@
 										@using (Html.BeginForm("HouseworkOperation", "Member", HttpMethod.Post)) {
 											<input type="hidden" name="ID" value="@housework.ID" />
 											<input type="hidden" value="2" name="action" />
+											<input type="hidden" name="FromPage" value="1" />
 											<input type="submit" name="ShowBtn" value="放弃" onclick="return ensure()" class="btn btn-sm btn-danger" />
 										}
 									</td>
@@ -85,6 +88,7 @@
 										@using (Html.BeginForm("HouseworkOperation", "Member", HttpMethod.Post)) {
 											<input type="hidden" name="ID" value="@housework.ID" />
 											<input type="hidden" value="3" name="action" />
+											<input type="hidden" name="FromPage" value="1" />
 											<input type="submit" name="ShowBtn" value="完成" onclick="return ensure()" class="btn btn-sm btn-primary" />
 										}
 									</td>
@@ -98,6 +102,7 @@
 					<td>@housework.ID</td>
 					<td style="width: 200px">@housework.Title</td>
 					<td>@housework.FromUsername</td>
+					<td>@housework.ToUsername</td>
 					<td>@housework.Date.GetDateTimeFormats('f')[0].ToString()</td>
 					<td>@housework.ModifyDate.GetDateTimeFormats('f')[0].ToString()</td>
 					@if (housework.Type == 1) {
@@ -107,22 +112,33 @@
 					}
 					<td>@housework.Score 分</td>
 					<td>未接受</td>
-					<td>@housework.ToUsername</td>
 					<td>未完成</td>
 					<td>
-						<table>
+						<table style="margin: auto">
 							<tr>
 								<td>
 									@using (Html.BeginForm("ShowHouseworkDetails", "Member", HttpMethod.Post)) {
 										<input type="hidden" name="ID" value="@housework.ID" />
+										<input type="hidden" name="FromPage" value="1" />
 										<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success" />
 									}
 								</td>
+								@if (housework.FromUsername == ViewBag.Username) {
+									<td></td>
+									<td>
+										@using (Html.BeginForm("EditHousework", "Member", HttpMethod.Post)) {
+											<input type="hidden" name="ID" value="@housework.ID" />
+											<input type="hidden" name="FromPage" value="1" />
+											<input type="submit" name="ShowBtn" value="修改" onclick="return ensure()" class="btn btn-sm btn-info" />
+										}
+									</td>
+								}
 								<td></td>
 								<td>
 									@using (Html.BeginForm("HouseworkOperation", "Member", HttpMethod.Post)) {
 										<input type="hidden" name="ID" value="@housework.ID" />
 										<input type="hidden" value="1" name="action" />
+										<input type="hidden" name="FromPage" value="1" />
 										<input type="submit" name="ShowBtn" value="接受" onclick="return ensure()" class="btn btn-sm btn-primary" />
 									}
 								</td>
