--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -57,6 +57,9 @@
 							<li>
 								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowHouseworks">查看事务</a>
 							</li>
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="MyHouseworks">我的事务</a>
+							</li>
 						</ul>
 					</li>
 					<li><a asp-area="" asp-controller="Member" asp-action="Members">家庭成员</a></li>
@@ -144,6 +147,9 @@
 							</li>
 							<li>
 								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowHouseworks">查看事务</a>
+							</li>
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="MyHouseworks">我的事务</a>
 							</li>
 						</ul>
 					</li>
