--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -45,6 +45,7 @@
 				<ul class="nav navbar-nav">
 					<li><a asp-area="" asp-controller="Member" asp-action="Index">主页</a></li>
 					<li><a asp-area="" asp-controller="Member" asp-action="ShowAnnouncements">公告</a></li>
+					<li><a asp-area="" asp-controller="Member" asp-action="Members">家庭成员</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 							家庭事务
@@ -62,7 +63,20 @@
 							</li>
 						</ul>
 					</li>
-					<li><a asp-area="" asp-controller="Member" asp-action="Members">家庭成员</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							家庭梦想
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowDreams">成员梦想</a>
+							</li>
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="MyDream">我的梦想</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 					<li>
@@ -136,6 +150,7 @@
 				<ul class="nav navbar-nav">
 					<li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
 					<li><a asp-area="" asp-controller="Member" asp-action="ShowAnnouncements">公告</a></li>
+					<li><a asp-area="" asp-controller="Member" asp-action="Members">家庭成员</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 							家庭事务
@@ -153,7 +168,20 @@
 							</li>
 						</ul>
 					</li>
-					<li><a asp-area="" asp-controller="Member" asp-action="Members">家庭成员</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							家庭梦想
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowDreams">成员梦想</a>
+							</li>
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="MyDream">我的梦想</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 					<li>
