多项更改 添加成员投票表，记录用户赞成/反对家庭梦想 增加成员梦想投票功能（赞成、反对、取消赞成、取消反对）

--- a/FamilySys/Views/Member/ShowDreams.cshtml
+++ b/FamilySys/Views/Member/ShowDreams.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
+﻿@using System.Net
+@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
 @model IQueryable<FamilySys.Models.ViewModels.MemberViewModel.ShowDreamsViewModel>
 @{
 	ViewData["Title"] = "家庭成员";
@@ -16,18 +17,30 @@
 			<th style="text-align: center">标题</th>
 			<th style="text-align: center">通过数</th>
 			<th style="text-align: center">不通过数</th>
+			<th style="text-align: center">通过情况</th>
 			<th style="text-align: center">操作</th>
 		</tr>
-		<tr>
-			<td>@ViewBag.myDreamTitle</td>
-			<td>@ViewBag.myDreamAgree</td>
-			<td>@ViewBag.myDreamVeto</td>
-			<td>
-				@using (Html.BeginForm("MyDream", "Member", HttpMethod.Get)) {
-					<input type="submit" name="SubBtn" value="修改" class="btn btn-primary" />
-				}
-			</td>
-		</tr>
+		@if (ViewBag.myDreamAgree == ViewBag.UserCount) {
+			<tr style="background-color: darkseagreen;">
+				<td>@ViewBag.myDreamTitle</td>
+				<td>@ViewBag.myDreamAgree</td>
+				<td>@ViewBag.myDreamVeto</td>
+				<td>已通过</td>
+				<td>无</td>
+			</tr>
+		} else {
+			<tr>
+				<td>@ViewBag.myDreamTitle</td>
+				<td>@ViewBag.myDreamAgree</td>
+				<td>@ViewBag.myDreamVeto</td>
+				<td>未通过</td>
+				<td>
+					@using (Html.BeginForm("MyDream", "Member", HttpMethod.Get)) {
+						<input type="submit" name="SubBtn" value="修改" class="btn btn-sm btn-primary" />
+					}
+				</td>
+			</tr>
+		}
 	</table>
 </div>
 
@@ -51,7 +64,59 @@
 					<td>@dream.Veto</td>
 					<td>已通过</td>
 					<td>
-
+						<table style="margin: auto">
+							<tr>
+								<td>
+									@using (Html.BeginForm("VoteDreams", "Member", HttpMethod.Post)) {
+										<input type="hidden" name="ID" value="@dream.ID" />
+										<input type="hidden" name="action" value="2" />
+										<input type="submit" name="SubBtn" value="取消通过" class="btn btn-sm btn-danger" />
+									}
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			} else if (@dream.IsAgree == "True") {
+				<tr>
+					<td>@dream.Username</td>
+					<td>@dream.Title</td>
+					<td>@dream.Agree</td>
+					<td>@dream.Veto</td>
+					<td>未通过</td>
+					<td>
+						<table style="margin: auto">
+							<tr>
+								<td>
+									@using (Html.BeginForm("VoteDreams", "Member", HttpMethod.Post)) {
+										<input type="hidden" name="ID" value="@dream.ID" />
+										<input type="hidden" name="action" value="2" />
+										<input type="submit" name="SubBtn" value="取消通过" class="btn btn-sm btn-danger" />
+									}
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			} else if (@dream.IsVeto == "True") {
+				<tr>
+					<td>@dream.Username</td>
+					<td>@dream.Title</td>
+					<td>@dream.Agree</td>
+					<td>@dream.Veto</td>
+					<td>未通过</td>
+					<td>
+						<table style="margin: auto">
+							<tr>
+								<td>
+									@using (Html.BeginForm("VoteDreams", "Member", HttpMethod.Post)) {
+										<input type="hidden" name="ID" value="@dream.ID" />
+										<input type="hidden" name="action" value="4" />
+										<input type="submit" name="SubBtn" value="取消否决" class="btn btn-sm btn-danger" />
+									}
+								</td>
+							</tr>
+						</table>
 					</td>
 				</tr>
 			} else {
@@ -62,7 +127,25 @@
 					<td>@dream.Veto</td>
 					<td>未通过</td>
 					<td>
-
+						<table style="margin: auto">
+							<tr>
+								<td>
+									@using (Html.BeginForm("VoteDreams", "Member", HttpMethod.Post)) {
+										<input type="hidden" name="ID" value="@dream.ID" />
+										<input type="hidden" name="action" value="1" />
+										<input type="submit" name="SubBtn" value="同意" class="btn btn-sm btn-success" />
+									}
+								</td>
+								<td></td>
+								<td>
+									@using (Html.BeginForm("VoteDreams", "Member", HttpMethod.Post)) {
+										<input type="hidden" name="ID" value="@dream.ID" />
+										<input type="hidden" name="action" value="3" />
+										<input type="submit" name="SubBtn" value="否决" class="btn btn-sm btn-danger" />
+									}
+								</td>
+							</tr>
+						</table>
 					</td>
 				</tr>
 			}
