--- a/FamilySys/Views/Member/ShowHouseworks.cshtml
+++ b/FamilySys/Views/Member/ShowHouseworks.cshtml
@@ -40,11 +40,35 @@
 					<td>已接受</td>
 					<td>已完成</td>
 					<td>
-						@using (Html.BeginForm("ShowHouseworkDetails", "Member", HttpMethod.Post)) {
-							<input type="hidden" name="ID" value="@housework.ID"/>
-							<input type="hidden" name="FromPage" value="1"/>
-							<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success"/>
-						}
+						<table style="margin: auto">
+							<tr>
+								<td>
+									@using (Html.BeginForm("ShowHouseworkDetails", "Member", HttpMethod.Post)) {
+										<input type="hidden" name="ID" value="@housework.ID" />
+										<input type="hidden" name="FromPage" value="1" />
+										<input type="submit" name="ShowBtn" value="查看" class="btn btn-sm btn-success" />
+									}
+								</td>
+								@if ( housework.FromUsername == ViewBag.Username && housework.IsRated == false) {
+									<td></td>
+									<td>
+										@using (Html.BeginForm("Rate", "Member", HttpMethod.Post)) {
+											<input type="hidden" name="ID" value="@housework.ID"/>
+											<input type="submit" name="ShowBtn" value="评分" class="btn btn-sm btn-primary"/>
+										}
+									</td>
+								} else if((housework.FromUsername == ViewBag.Username && housework.IsRated == true) || (housework.ToUsername == ViewBag.Username && housework.IsRated == true)) {
+									<td></td>
+									<td>
+										@using (Html.BeginForm("CheckRate", "Member", HttpMethod.Post)) {
+											<input type="hidden" name="ID" value="@housework.ID" />
+											<input type="hidden" name="FromPage" value="1" />
+											<input type="submit" name="SubBtn" class="btn btn-sm btn-primary" value="查看评分" />
+										}
+									</td>
+								}
+							</tr>
+						</table>	
 					</td>
 				</tr>
 			} else if (housework.ToID != null) {
