--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -56,7 +56,18 @@
 							</li>
 						</ul>
 					</li>
-					<li><a asp-area="" asp-controller="Admin" asp-action="Members">家庭成员信息管理</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							信息管理
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="Members">成员信息管理</a>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowHouseworks">事务信息管理</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 					<li>
@@ -141,7 +152,18 @@
 							</li>
 						</ul>
 					</li>
-					<li><a asp-area="" asp-controller="Admin" asp-action="Members">家庭成员信息管理</a></li>			
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							信息管理
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="Members">成员信息管理</a>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowHouseworks">事务信息管理</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 					<li>
