--- a/FamilySys/Views/Shared/_Layout.cshtml
+++ b/FamilySys/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
 				<ul class="nav navbar-nav">
 					<li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
 					<li><a asp-area="" asp-controller="Home" asp-action="Members">家庭成员</a></li>
+					<li><a asp-area="" asp-controller="Home" asp-action="ShowHouseworks">家庭事务</a></li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav">
 					<li>
@@ -114,6 +115,7 @@
 				<ul class="nav navbar-nav">
 					<li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
 					<li><a asp-area="" asp-controller="Home" asp-action="Members">家庭成员</a></li>
+					<li><a asp-area="" asp-controller="Home" asp-action="ShowHouseworks">家庭事务</a></li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav">
 					<li>
